--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,9 +44,6 @@ label {
 .footer-logo {
   width: 80px;
 }
-.image-card {
-  height: 150px;
-}
 
 /* md ≥ 768px */
 @media (min-width: 768px) {
@@ -64,6 +61,9 @@ label {
   }
   .logo-text {
     font-size: 1.5rem;
+  }
+  .hero-card {
+    width: 75%;
   }
 }
 
@@ -98,8 +98,5 @@ label {
   }
   .footer-logo {
     width: 130px;
-  }
-  .image-card {
-    height: 220px;
   }
 }
