Subindo novo design na tela de home

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,10 @@ label {
   width: 80px;
 }
 
+.hero-image {
+  width: 65vw;
+}
+
 /* md ≥ 768px */
 @media (min-width: 768px) {
   h1 {
@@ -62,8 +66,8 @@ label {
   .logo-text {
     font-size: 1.5rem;
   }
-  .hero-card {
-    width: 75%;
+  .hero-image {
+    width: 45vw;
   }
 }
 
@@ -98,5 +102,8 @@ label {
   }
   .footer-logo {
     width: 130px;
+  }
+  .hero-image {
+    width: 40vw;
   }
 }
